--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
     </span>
   </foreignObject>
 </svg>
-    <script src='https://unpkg.co/gsap@3/dist/gsap.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin3.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/DrawSVGPlugin3.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MotionPathPlugin.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/Physics2DPlugin3.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/EasePack3.min.js'></script><script  src="./script.js"></script>
+    <script src='https://cdn.jsdelivr.net/npm/gsap@3.14/dist/gsap.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/gsap@3.14/dist/MorphSVGPlugin.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/gsap@3.14/dist/DrawSVGPlugin.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/gsap@3.14/dist/MotionPathPlugin.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/gsap@3.14/dist/Physics2DPlugin.min.js'></script>
+<script src='https://cdn.jsdelivr.net/npm/gsap@3.14/dist/EasePack.min.js'></script>
+<script src="./script.js"></script>
 
   </body>
   
